# index-search

./: .gitignore  CHANGES.txt  README.md  index-search.cabal
cbits/: .tm_project.cache  .tm_project2.cache  bzlib_private.h  fm_extract.c  fm_huffman.c  fm_multihuf.c  fm_read.c
cbits/ds_ssort/: blind2.c  bwt  deep2.c  ds  shallow.c  testlcp
src/: Main.hs
src/Data/: IndexSearch.hs
src/Data/IndexSearch/: FMIndex.hs  Type.hs
